@@ -85,8 +85,10 @@ typedef wint_t tre_cint_t;
 #define tre_isupper iswupper
 #define tre_isxdigit iswxdigit
 
-#define tre_tolower towlower
-#define tre_toupper towupper
+/* use Ri18n_towlower and Ri18n_towupper, because the UCRT versions do not seem
+   do be working with some characters, such as \ue9 / \uc9 */
+#define tre_tolower Ri18n_towlower
+#define tre_toupper Ri18n_towupper
 #define tre_strlen  wcslen
 
 #else /* !TRE_WCHAR */
