@@ -1205,7 +1205,7 @@
 /* #undef USE_PTH_THREADS_WEAK */
 
 /* Define to 1 to use internal code for `towlower' and `towupper'. */
-/* #undef USE_RI18N_CASE */
+#define USE_RI18N_CASE 1
 
 /* Define to 1 to use internal `iswprint' etc. */
 #define USE_RI18N_FNS 1
